--- a/docs/18summer.yaml
+++ b/docs/18summer.yaml
@@ -32,6 +32,7 @@ Tue:
 Wed:
   - 24:00, MX, Free!-Dive to the Future-
   - 25:05, MX, アンゴルモア 元寇合戦記
+  - 25:35, MX, シュタインズ・ゲート ゼロ
 Thu:
   - 22:00, MX, 異世界魔王と召喚少女の奴隷魔術
   - 22:30, MX, すのはら荘の管理人さん
