--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -4,6 +4,10 @@ services:
   gokabot-line-dev:
     image: gokabot-line-dev
     container_name: gokabot-line-dev
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      TZ: Asia/Tokyo
     build: .
     ports:
       - "8081:8080"
