--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,9 +1,9 @@
 version: '2.1'
 
 services:
-  gokabot-line-dev:
-    image: gokabot-line-dev
-    container_name: gokabot-line-dev
+  gokabot-line-local:
+    image: gokabot-line-local
+    container_name: gokabot-line-local
     volumes:
       - /etc/localtime:/etc/localtime:ro
     environment:
@@ -17,10 +17,3 @@ services:
       "-p", "8080"
     ]
     restart: always
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-region: ap-northeast-1
-        awslogs-group: docker-logs
-        awslogs-create-group: "true"
-        awslogs-stream: ok-diet
