--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -35,6 +35,7 @@ jobs:
           LINE_CHANNEL_SECRET: ${{ secrets.LINE_CHANNEL_SECRET }}
           LINE_CHANNEL_TOKEN: ${{ secrets.LINE_CHANNEL_TOKEN }}
           TAKENOKO_USER_ID: ${{ secrets.TAKENOKO_USER_ID }}
+          OPEN_WEATHER_API_KEY: ${{ secrets.OPEN_WEATHER_API_KEY }}
         run: |
           gem install bundler -v 2.1.2
           bundle install --without development
