--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -8,6 +8,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       TZ: Asia/Tokyo
+      RACK_ENV: development
     env_file:
       - core-api/.env
     build:
