--- a/gokabot-demo/.gitignore
+++ b/gokabot-demo/.gitignore
@@ -1,11 +1,10 @@
+# JS
 .DS_Store
 node_modules
 /dist
 
-
-# local env files
-.env.local
-.env.*.local
+# Env files
+.env*
 
 # Log files
 npm-debug.log*
@@ -15,7 +14,6 @@ pnpm-debug.log*
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
