Change HTTP client: rest-client -> faraday

--- a/core-api/Gemfile
+++ b/core-api/Gemfile
@@ -5,12 +5,12 @@ ruby '2.6.6'
 gem 'activerecord'
 gem 'discordrb'
 gem 'dotenv'
+gem 'faraday'
 gem 'line-bot-api'
 gem 'mechanize'
 gem 'natto'
 gem 'nokogiri'
 gem 'pg'
-gem 'rest-client'
 gem 'rexml'
 gem 'sinatra'
 gem 'sinatra-cors'
