--- a/core-api/Gemfile
+++ b/core-api/Gemfile
@@ -11,6 +11,8 @@ gem 'mechanize'
 gem 'natto'
 gem 'nokogiri'
 gem 'pg'
+gem 'puma'
+gem 'puma_worker_killer'
 gem 'rexml'
 gem 'sinatra'
 gem 'sinatra-cors'
