--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,20 +4,26 @@ phases:
   pre_build:
     commands:
       - echo "[`date`] Start pre_build --------------------------------------------------------------------------------"
+      - export REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - echo AWS_DEFAULT_REGION = $AWS_DEFAULT_REGION
       - echo AWS_ACCOUNT_ID = $AWS_ACCOUNT_ID
       - echo IMAGE_REPO_NAME = $IMAGE_REPO_NAME
       - echo IMAGE_TAG = $IMAGE_TAG
+      - echo REPOSITORY_URI = $REPOSITORY_URI
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo "[`date`] Finish pre_build --------------------------------------------------------------------------------"
   build:
     commands:
       - echo "[`date`] Start build --------------------------------------------------------------------------------"
       - docker-compose build
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
       - echo "[`date`] Finish build --------------------------------------------------------------------------------"
   post_build:
     commands:
       - echo "[`date`] Start post_build --------------------------------------------------------------------------------"
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - printf '{"Version":"1.0","ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
       - echo "[`date`] Finish post_build --------------------------------------------------------------------------------"
+artifacts:
+  files:
+    - imageDetail.json
