Add application resources

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2.1"
 
 services:
   gokabot-core:
-    image: gokabot-core
-    container_name: gokabot-core
+    image: gokabot-core-api
+    container_name: gokabot-core-api
     build:
       context: core-api
