--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         TaskDefinition: "<TASK_DEFINITION>"
         LoadBalancerInfo:
-          ContainerName: "gokabot-core"
+          ContainerName: "gokabot-core-api"
           ContainerPort: "8080"
