--- a/.github/workflows/gokabot-demo.yml
+++ b/.github/workflows/gokabot-demo.yml
@@ -22,5 +22,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: ESLint in Docker Container
         run: |
-          docker-compose -f docker-compose.local.yml up -d
-          docker-compose -f docker-compose.local.yml exec -T gokabot-demo yarn lint
+          docker-compose -f docker-compose.front-test.yml up -d
+          docker-compose -f docker-compose.front-test.yml exec -T gokabot-demo yarn lint
