--- a/core-api/Dockerfile
+++ b/core-api/Dockerfile
@@ -3,8 +3,7 @@ ENV RUBYOPT -EUTF-8
 
 LABEL Name=gokabot-core-api Version=1.0.0
 
-RUN apt update 
-RUN apt install -y mecab libmecab-dev mecab-ipadic mecab-ipadic-utf8
+RUN apt update && apt install -y mecab libmecab-dev mecab-ipadic mecab-ipadic-utf8
 
 RUN gem install bundler -v 2.1.4
 RUN bundle config set without development
