--- a/gokabot-demo/package.json
+++ b/gokabot-demo/package.json
@@ -9,6 +9,8 @@
     },
     "dependencies": {
         "@types/jquery": "^3.5.4",
+        "@vue/compat": "^3.2.37",
+        "@vue/compiler-sfc": "^3.2.37",
         "core-js": "^3.17.2",
         "jquery": "^3.5.1",
         "vue": "^3.2.37",
@@ -30,8 +32,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-vue": "^9.1.1",
         "prettier": "^2.2.1",
-        "typescript": "~4.7.3",
-        "vue-template-compiler": "^2.6.11"
+        "typescript": "~4.7.3"
     },
     "volta": {
         "node": "14.17.5",
