--- a/gokabot-demo/package.json
+++ b/gokabot-demo/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "tsc": "vue-tsc --noEmit"
     },
     "dependencies": {
         "@types/jquery": "^3.5.4",
@@ -32,7 +33,8 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-vue": "^9.1.1",
         "prettier": "^2.2.1",
-        "typescript": "~4.7.3"
+        "typescript": "~4.7.3",
+        "vue-tsc": "^0.37.9"
     },
     "volta": {
         "node": "14.17.5",
