Change TypeScript formatter to Volar

--- a/gokabot-demo/.vscode/settings.json
+++ b/gokabot-demo/.vscode/settings.json
@@ -13,7 +13,7 @@
     // TypeScript
     "[typescript]": {
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+        "editor.defaultFormatter": "Vue.volar"
     },
 
     // Vue
