--- a/gokabot-demo/package.json
+++ b/gokabot-demo/package.json
@@ -3,9 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint",
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint src --fix",
         "tsc": "vue-tsc --noEmit"
     },
     "dependencies": {
@@ -19,13 +20,10 @@
         "vue-router": "^4.0.16"
     },
     "devDependencies": {
+        "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
         "@typescript-eslint/parser": "^5.28.0",
-        "@vue/cli-plugin-babel": "~5.0.5",
-        "@vue/cli-plugin-eslint": "~5.0.5",
-        "@vue/cli-plugin-router": "~5.0.5",
-        "@vue/cli-plugin-typescript": "~5.0.5",
-        "@vue/cli-service": "~5.0.5",
+        "@vitejs/plugin-vue": "^2.3.3",
         "@vue/compiler-sfc": "^3.2.37",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^11.0.0",
@@ -33,7 +31,9 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-vue": "^9.1.1",
         "prettier": "^2.2.1",
+        "tslint": "^6.1.3",
         "typescript": "~4.7.3",
+        "vite": "^2.9.12",
         "vue-tsc": "^0.37.9"
     },
     "volta": {
