--- a/gokabot-demo/package.json
+++ b/gokabot-demo/package.json
@@ -20,7 +20,6 @@
         "vue-router": "^4.0.16"
     },
     "devDependencies": {
-        "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
         "@typescript-eslint/parser": "^5.28.0",
         "@vitejs/plugin-vue": "^2.3.3",
@@ -34,6 +33,7 @@
         "tslint": "^6.1.3",
         "typescript": "~4.7.3",
         "vite": "^2.9.12",
+        "vite-tsconfig-paths": "^3.5.0",
         "vue-tsc": "^0.37.9"
     },
     "volta": {
