Fix yarn commands to use vite

--- a/docker-compose.front-test.yml
+++ b/docker-compose.front-test.yml
@@ -10,4 +10,4 @@ services:
       context: gokabot-demo
     ports:
       - "3000:3000"
-    command: ["yarn", "serve"]
+    command: ["yarn", "vite"]
