--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -36,7 +36,7 @@ services:
       context: gokabot-demo
     ports:
       - "3000:3000"
-    command: ["yarn", "serve"]
+    command: ["yarn", "vite"]
 
   metabase:
     # see: https://www.metabase.com/docs/latest/operations-guide/running-metabase-on-docker.html
