--- a/core-api/.vscode/settings.json
+++ b/core-api/.vscode/settings.json
@@ -2,10 +2,14 @@
     // Ruby
     "[ruby]": {
         "editor.formatOnSave": true,
-        "editor.tabSize": 2
+        "editor.tabSize": 2,
+        "editor.defaultFormatter": "Shopify.ruby-lsp"
     },
-    "ruby.rubocop.useBundler": true,
+    "rubyLsp.formatter": "rubocop",
+    "rubyLsp.bundleGemfile": "Gemfile",
+    "rubyLsp.enableExperimentalFeatures": true,
     "solargraph.useBundler": true,
+    "solargraph.diagnostics": true,
     "solargraph.autoformat": true,
 
     // JSON
