--- a/core-api/.rubocop.yml
+++ b/core-api/.rubocop.yml
@@ -53,6 +53,10 @@ Lint/UnmodifiedReduceAccumulator:
 Metrics/AbcSize:
   Max: 30
 
+Metrics/BlockLength:
+  Exclude:
+    - "spec/**/*"
+
 Metrics/CyclomaticComplexity:
   Max: 10
 
